中文翻译：列车站、坚固板
Co-authored-by: bucketBrian <bucketBrian@users.noreply.github.com>
Co-authored-by: YinXin24 <YinXin24@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: Logic530 <sirui313@gmail.com>
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -506,7 +506,7 @@
 	"block.create.track": "列车轨道",
 	"block.create.track_observer": "列车侦测器",
 	"block.create.track_signal": "列车信号机",
-	"block.create.track_station": "列车车站",
+	"block.create.track_station": "列车站",
 	"block.create.train_door": "列车门",
 	"block.create.train_trapdoor": "列车活板门",
 	"block.create.tuff_pillar": "凝灰岩柱",
@@ -650,7 +650,7 @@
 	"item.create.schematic": "蓝图",
 	"item.create.schematic_and_quill": "蓝图与笔",
 	"item.create.shadow_steel": "暗影钢",
-	"item.create.sturdy_sheet": "牢靠板",
+	"item.create.sturdy_sheet": "坚固板",
 	"item.create.super_glue": "强力胶",
 	"item.create.sweet_roll": "甜甜卷",
 	"item.create.tree_fertilizer": "树木肥料",
@@ -738,7 +738,7 @@
 	"advancement.create.spout.desc": "观察注液器灌满物品",
 	"advancement.create.drain": "滚筒排液",
 	"advancement.create.drain.desc": "目睹物品被分液池排空",
-	"advancement.create.steam_engine": "发电站",
+	"advancement.create.steam_engine": "动力强权",
 	"advancement.create.steam_engine.desc": "用蒸汽引擎产生动力",
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽笛",
@@ -821,9 +821,9 @@
 	"advancement.create.musical_arm": "没人能在我的 BGM 里打败我！",
 	"advancement.create.musical_arm.desc": "使用动力臂播放唱片",
 	"advancement.create.sturdy_sheet": "坚如磐石",
-	"advancement.create.sturdy_sheet.desc": "用精炼粉碎黑曜石装配坚固薄板",
+	"advancement.create.sturdy_sheet.desc": "用精炼粉碎黑曜石装配坚固板",
 	"advancement.create.train_casing_00": "运输时代",
-	"advancement.create.train_casing_00.desc": "用坚固薄板制作列车组件的机壳",
+	"advancement.create.train_casing_00.desc": "用坚固板制作列车组件的机壳",
 	"advancement.create.train": "各位请上车!",
 	"advancement.create.train.desc": "装配你的第一辆列车",
 	"advancement.create.conductor": "指挥者的指挥者",
