--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -694,7 +694,7 @@
 	"advancement.create.burner.desc": "获得烈焰人燃烧室",
 	"advancement.create.water_wheel": "论水力学的运用",
 	"advancement.create.water_wheel.desc": "放置一个水车并且让它开始旋转！",
-	"advancement.create.windmill": "微风吹拂",
+	"advancement.create.windmill": "听凭风引",
 	"advancement.create.windmill.desc": "组装风车并使其产生动力",
 	"advancement.create.shifting_gears": "换挡，加速，起飞！",
 	"advancement.create.shifting_gears.desc": "将大齿轮连接到小齿轮上，可以改变装置的转速",
