--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -798,9 +798,9 @@
 	"advancement.create.display_link.desc": "用翻牌显示器可视化资讯",
 	"advancement.create.potato_cannon": "轰!",
 	"advancement.create.potato_cannon.desc": "用土豆加农炮击杀一个生物",
-	"advancement.create.extendo_grip": "Boioioing!",
+	"advancement.create.extendo_grip": "拿来吧你",
 	"advancement.create.extendo_grip.desc": "获得一个伸缩机械手",
-	"advancement.create.linked_controller": "层层遥控",
+	"advancement.create.linked_controller": "你信号59+",
 	"advancement.create.linked_controller.desc": "用无线红石遥控器激活无线红石终端",
 	"advancement.create.arm_blaze_burner": "熊熊燃烧",
 	"advancement.create.arm_blaze_burner.desc": "指导动力臂给烈焰人燃烧室投食",
